<resources>
    <string name="app_name">French Phrase</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome</string>
    <string name="how_are_you">How are you?</string>
    <string name="please">Please</string>
    <string name="good_evening">Good Evening</string>
    <string name="do_you_speak_english">Do you Speak English?</string>
    <string name="my_name_is">My Name Is..</string>
    <string name="i_live">I Live</string>
</resources>
