<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="449dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/hello"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/hello"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/welcome"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/welcome"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/howareyou"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/how_are_you"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/please"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/please"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/goodevening"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/good_evening"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/doyouspeakenglish"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/do_you_speak_english"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/mynameis"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/my_name_is"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/ilive"
            android:layout_width="170dp"
            android:layout_height="92dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn"
            android:onClick="ButtonTapped"
            android:text="@string/i_live"
            app:layout_column="2"
            app:layout_row="3" />

    </android.support.v7.widget.GridLayout>


</RelativeLayout>